# this-is-practice-repository-removed-soon

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Manifest.toml  Project.toml  build.sh  docker-entrypoint.sh  install.sh  main.cpp  main.scm  meson.build  out.txt  plot_contours_z.html  plot_contours_z.jl
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  build.yaml  ci.yaml  codecov.yml  dockerhub.yaml  release.yaml  test.yml  upload_codecov.yml  use.yaml
dev/bench/: data.js
devdocs/: ast.md  grammer.md
src/: main.cpp  mylib.cpp  mylib.hpp
tests/: benchmark_mylib.cpp  parser-tests.rkt  run-tests.scm  test-utils.rkt  test_mylib.cpp  tokenizer-tests.rkt
